--- a/LibraryStore/web/css/style.css
+++ b/LibraryStore/web/css/style.css
@@ -1,61 +1,65 @@
+
 .contener{
-  position:absolute; 
-   background:  100%   url("../image/background.png") ;
-   width:100%;
-   height: 900px;
-        
+    position:absolute; 
+    background:  100%   url("../image/background.png") ;
+    width:100%;
+    height: 900px;
+
 }
 
 .cadre{
-    
+
     margin-left: auto;
     margin-right: auto;
     background:  url("../image/background3.png");
     width:90%;
     height: 800px;
-  
-    
+
+
 }
 
 .logo{
-    
- position:relative; 
- height:120px;
-   
+
+    position:relative; 
+    height:120px;
+
 }
 
 
 
 .search{
-    
+
     position:relative;
-    margin-top:50px; 
+    margin-top:30px; 
 }
 
 .socialIcon{
-    
+
     position:relative;
-    margin-top:60px;
-    
+    margin-top:40px;
+
 }
 
 .head img{
-   
-   padding-right: 0;
-   margin-right:0;    
-   height:140px;
-   width:300px;
-   
+    padding-right: 0;
+    margin-right:0;    
+    height:120px;
+    width:300px;
 }
 
 
+.navbar-nav{
+    float:none;
+}
 .navbar, .navbar-inverse{
     position:relative;
-       
+    
+    
+
 }
 
 .leftSection{
-   
+
     position:relative;
     background-color:  white;
     height:400px;  
@@ -65,7 +69,7 @@
 .centralSection{
     position:relative;
     height:400px;
-   
+
 }
 .carousel {               
     height: 400px;        
@@ -77,12 +81,12 @@
 }
 
 .iconCommand{
-   margin-left:90%;
+    margin-left:90%;
 }
 
 
 .rightSection{
-   
+
     position:relative;
     background:  url("../image/bloc2.png") no-repeat;
     height:400px;  
@@ -99,27 +103,44 @@
     background: url("../image/background.png")  ;
     height:150px;
     border-radius: 5px;
-    
+
 }
 
 
+@media(min-width:768px)and (max-width: 992px){
 
-@media(max-width:767px){
     .logo img{
-        
         max-width:100%;
-        min-width:50%;
+        min-width:50%; 
     }
-}
-@media(min-width:768px){
-    
+    .logo{
+        height:120px;
+    }
+    .head img{
+        height:120px;
+    }
+
+    .navbar-inverse .navbar-nav>li>a{
+        font-size:12px;
+    }     }
+
+
+@media(max-width:768px){
+
     .logo img{
-        
         max-width:100%;
-        min-width:50%;
-        
-        
+        min-width:50%; 
     }
+    .logo{
+        height:80px;
+    }
+    .head img{
+        height:80px;
+    }
+
 }
-@media(min-width:992px){}
-@media(min-width:1200px){}
+
+
+
+
+
